# PSTA-16

./: .gitignore  CMakeLists.txt  README.md  config.in  env.sh
Test-Suite/: CMakeLists.txt  aliascheck.h  generate_bc.sh
Test-Suite/src/df/: df0.c  df1.c  df10.c  df11.c  df12.c  df13.c  df14.c  df15.c  df16.c  df17.c  df18.c  df19.c  df2.c  df20.c  df21.c  df22.c  df23.c  df24.c  df25.c  df26.c  df27.c  df28.c  df29.c  df3.c  df30.c  df31.c  df32.c  df33.c  df34.c  df35.c  df36.c  df37.c  df38.c  df39.c  df4.c  df40.c  df41.c  df42.c  df43.c  df44.c  (+5 more)
Test-Suite/src/mem_leak/: malloc10.c  malloc26.c  malloc27.c  malloc30.c  malloc31.c  malloc32.c  malloc50.c  malloc52.c  malloc53.c  malloc60.c  malloc61.c  malloc62.c  malloc63.c  malloc64.c  sp12.c  sp12a.c  sp14a.c  sp8.c
Test-Suite/src/tdf/: CWE415_Double_Free__malloc_free_char_01.c  CWE415_Double_Free__malloc_free_char_02.c  CWE415_Double_Free__malloc_free_char_03.c  CWE415_Double_Free__malloc_free_char_04.c  CWE415_Double_Free__malloc_free_char_05.c  CWE415_Double_Free__malloc_free_char_06.c  CWE415_Double_Free__malloc_free_char_07.c  CWE415_Double_Free__malloc_free_char_08.c  CWE415_Double_Free__malloc_free_char_09.c  CWE415_Double_Free__malloc_free_char_10.c  CWE415_Double_Free__malloc_free_char_11.c  CWE415_Double_Free__malloc_free_char_13.c  CWE415_Double_Free__malloc_free_char_14.c  CWE415_Double_Free__malloc_free_char_15.c  CWE415_Double_Free__malloc_free_char_16.c  CWE415_Double_Free__malloc_free_char_17.c  CWE415_Double_Free__malloc_free_char_18.c  CWE415_Double_Free__malloc_free_char_21.c  CWE415_Double_Free__malloc_free_char_22a.c  CWE415_Double_Free__malloc_free_char_31.c  CWE415_Double_Free__malloc_free_char_32.c  CWE415_Double_Free__malloc_free_char_34.c  (+200 more)
docs/: ESP.md
include/Bases/: AbstractValue.h  AddressValue.h  BoundedZ3Expr.h  ConsExeState.h  ExeState.h  NumericLiteral.h  SingleAbsValue.h  SymState.h
include/Detectors/: DFDetector.h
include/PSTA/: BTPExtractor.h  CheckerAPI.json  FSMHandler.h  Logger.h  PSAStat.h  PSTA.h  PSTABase.h  SVFIR2ConsExeState.h
include/Slicing/: ControlDGBuilder.h  ICFGWrapper.h  PIExtractor.h  PIState.h  SpatialSlicer.h  TemporalSlicer.h
lib/: CMakeLists.txt  main.cpp
lib/Bases/: ConsExeState.cpp  ExeState.cpp  SymState.cpp
lib/Detectors/: DFDetectorBase.cpp  MemLeakDetector.cpp  UAFDetector.cpp  UAFDetectorBase.cpp
lib/PSTA/: BTPExtractor.cpp  PSAOptions.cpp  PSAStat.cpp  PSTA.cpp  PSTABase.cpp  SNKExtractor.cpp  SVFIR2ConsExeState.cpp
lib/Slicing/: ControlDG.cpp  ControlDGBuilder.cpp  GraphSparsificator.cpp  ICFGWrapper.cpp  PIExtractor.cpp  PIState.cpp  SpatialSlicer.cpp
res/: df.fsm  file.fsm  memleak.fsm  uaf.fsm
res/rw/: df.fsm  memleak.fsm  uaf.fsm
src/: CMakeLists.txt
src/Detectors/: DFDetector.cpp  DFDetectorBase.h  MemLeakDetector.h  MemLeakDetectorBase.cpp  MemLeakDetectorBase.h  UAFDetector.h  UAFDetectorBase.h
src/PSTA/: BTPExtractor.cpp  FSMHandler.cpp  FSMHandler.h  PSAOptions.cpp  PSAOptions.h  PSAStat.cpp  PSTA.cpp  PSTA.h  PSTABase.cpp  SNKExtractor.h
src/Slicing/: ControlDG.cpp  ControlDG.h  ControlDGBuilder.cpp  ControlDGBuilder.h  GraphSparsificator.cpp  GraphSparsificator.h  ICFGWrapper.cpp  SpatialSlicer.cpp  SpatialSlicer.h  TemporalSlicer.cpp  TemporalSlicer.h
tools/: CMakeLists.txt  psta.cpp
(+1148 files in other folders)
